添加了关于KMP算法的注释，测试提交到多个远程库功能

--- a/04/04(书面作业).md
+++ b/04/04(书面作业).md
@@ -97,14 +97,11 @@ unsigned isSubstr(const string &s, const string &t) {
     int * next = new int [t.length()];
     next[0] = -1;
     int k = -1, j = 0, i = 0;
-    while (j < t.length() - 1) {
-        if (k == -1 || t[j] == t[k])
-            next[++j] = ++k;
-        else
-            k = next[k];
-    }
+    while (j < t.length() - 1) 
+        k = (k == -1 || t[j] == t[k]) ? next[++j] = ++k : next[k];
 
-    i = 0; j = 0;
+    // 开始匹配
+    i = j = 0;
     while (i < s.length() && j < int(t.length())) 
         // 若 j 匹配成功、或者第一个就匹配失败了，就移动i，否则回溯匹配
         j = (j == -1 || s[i] == t[j]) ? (++i, ++j) : next[j];
