Finished theory homework 5

--- a/05/书面作业/05.md
+++ b/05/书面作业/05.md
@@ -158,3 +158,69 @@ void swap(node<T> * p) {
     }
 }
 ```
+
+## 11. 实现树的各种遍历
+### 前序遍历
+```cpp
+template <class T>
+vector<T> NLR(node<T> *p) {
+    if (p == nullptr)
+        return;
+    auto ans = p -> val;
+    auto left = NLP(p -> left);
+    auto right = NLP(p -> right);
+    ans.insert(ans.end(), left.begin(), left.end());
+    ans.insert(ans.end(), right.begin(), right.end());
+    return ans;
+}
+```
+
+### 中序遍历
+```cpp
+template <class T>
+vector<T> LNR(node<T> *p) {
+    if (p == nullptr)
+        return vector<T>();
+    auto ans = NLP(p -> left);
+    auto right = NLP(p -> right);
+    ans.push_back(p -> val);
+    ans.insert(ans.end(), right.begin(), right.end());
+    return ans;
+}
+```
+
+### 后序遍历
+```cpp
+template <class T>
+vector<T> LRN(node<T> *p) {
+    if (p == nullptr)
+        return vector<T>();
+    auto ans = NLP(p -> left);
+    auto right = NLP(p -> right);
+    ans.insert(ans.end(), right.begin(), right.end());
+    ans.push_back(p -> val);
+    return ans;
+}
+```
+
+### 层序遍历
+```cpp
+template <class T>
+vector<T> BFS(node <T> *p) {
+    if (p == nullptr)
+        return vector<T>();
+    queue<node <T> *> q;
+    vector<T> ans;
+    q.push(p);
+    while (q.size()) {
+        auto top = q.top();
+        q.pop();
+        ans.push_back(top -> val);
+        if (tmp -> left)
+            q.push(tmp -> left);
+        if (tmp -> right)
+            q.push(tmp -> right);
+    }
+    return ans;
+}
+```
