Create lab5 repo

--- a/05/书面作业/05.md
+++ b/05/书面作业/05.md
@@ -5,8 +5,8 @@
 > 部分代码可在 [gitee.com/Czile/homework]() 中找到
 ---
 
-## 1. 证明：满二叉树的分支数为 `B` = 2(`n0` - 1). `n0` 为叶子节点数
-由性质5-3[1]， `n2` = `n0` - 1， `n2` 是度数为2的节点数。于是题设要证 `B` = 2`n2`.
+## 1. 证明：满二叉树的分支数为 $B$ = 2($n_0$ - 1). $n_0$ 为叶子节点数
+由性质5-3[1]， $n_2$ = $n_0$ - 1， $n_2$ 是度数为2的节点数。于是题设要证 $B$ = 2$n_2$.
 
 由满二叉树的性质[2]， 满二叉树只有度数为0和度数为2的节点，于是没有度数为1的节点，每一个度数为2的节点有两个子节点，
 
@@ -18,12 +18,12 @@
 
 > [3] 本题也可用图论中边数等于节点度数和来证明
 
-## 2. 已知度为 `m` 的树中，有 `ni` 个度数为 `i` 的节点，求树中有多少个叶子节点。
-由图论中总度数等于总边数[3]的结论，总度数为： sum(`i` · `ni`)
+## 2. 已知度为 $m$ 的树中，有 $n_i$ 个度数为 $i$ 的节点，求树中有多少个叶子节点。
+由图论中总度数等于总边数[3]的结论，总度数为： sum($i$ · $n_i$)
 
 除了根节点外，每个节点有且仅有一个父节点，于是得到结论：节点数 - 1 = 分支数。
 
-于是得到等式：`n0` = sum(`i` · `ni`) - sum(`ni`) + 1    [4]
+于是得到等式：$n_0$ = sum($i$ · $n_i$) - sum($n_i$) + 1    [4]
 
 > [4] 本题限定只存在度数为0和度数为2的节点，即可得到性质5-3
 
