补充了第五次书面作业

--- a/05/书面作业/05.md
+++ b/05/书面作业/05.md
@@ -1,8 +1,10 @@
----
 # 数据结构与算法第五次作业
-> 陈梓乐 19336035
+<center> 
+<b>陈梓乐 19336035
+<br>
+部分代码可在 <a href="http://www.gitee.com/Czile/homework"> gitee.com/Czile/homework </a> 中找到</b>
+</center>
 
-> 部分代码可在 [gitee.com/Czile/homework]() 中找到
 ---
 
 ## 1. 证明：满二叉树的分支数为 $B$ = 2($n_0$ - 1). $n_0$ 为叶子节点数
@@ -222,5 +224,189 @@ vector<T> BFS(node <T> *p) {
             q.push(tmp -> right);
     }
     return ans;
+}
+```
+
+## 12. 编写程序，实现各种线索二叉树
+### 前序线索二叉树
+```cpp
+template <typename T> void Binarytree<T>::_preorder(
+    const Binarytreenode * p,
+    thrnode *& y, thrnode *& pre
+) noexcept {
+    if (p == nullptr) return;
+    y = new thrnode(p -> val);
+    if (pre && pre -> rtag) pre -> right = y;
+    y -> rtag = !(p -> right);
+    y -> ltag = !(p -> left);
+    if (y -> ltag) y -> left = pre;
+    pre = y;
+    _preorder(p -> left, y -> left, pre);
+    _preorder(p -> right, y -> right, pre);
+}
+```
+
+### 中序线索二叉树
+```cpp
+template <typename T> void Binarytree<T>::_inorder(
+    const Binarytreenode * p,
+    thrnode *& y, thrnode *& pre
+) noexcept {
+    if (p == nullptr) return;
+    y = new thrnode(p -> val);
+    _inorder(p -> left, y -> left, pre);
+    if (pre && pre -> rtag) pre -> right = y;
+    y -> rtag = !(p -> right);
+    y -> ltag = !(p -> left);
+    if (y -> ltag) y -> left = pre;
+    pre = y;
+    _inorder(p -> right, y -> right, pre);
+}
+```
+
+### 后序线索二叉树
+```cpp
+template <typename T> void Binarytree<T>::_postorder(
+    const Binarytreenode * p,
+    thrnode *& y, thrnode *& pre
+) noexcept {
+    if (p == nullptr) return;
+    y = new thrnode(p -> val);
+    _postorder(p -> left, y -> left, pre);
+    _postorder(p -> right, y -> right, pre);
+    if (pre && pre -> rtag) pre -> right = y;
+    y -> rtag = !(p -> right);
+    y -> ltag = !(p -> left);
+    if (y -> ltag) y -> left = pre;
+    pre = y;
+}
+```
+
+### 层序线索二叉树
+```cpp
+template <typename T> typename Binarytree<T>::thrnode * 
+Binarytree<T>::getBFSThrBiTree() noexcept {
+    erase(t);
+    if (p == nullptr) return t;
+    std::vector<thrnode *> ans;
+    std::queue<Binarytreenode *> tmp;
+    auto i = 0;
+    ans.push_back(new thrnode(p -> val));
+    tmp.push(p);
+    while (i < ans.size()) {
+        auto _p = tmp.front();
+        if (_p -> left) {
+            ans.push_back(
+                ans[i] -> left = new thrnode(_p -> left -> val)
+            ); 
+            tmp.push(_p -> left);
+        } else {
+            ans[i] -> ltag = 1;
+            if (i) ans[i] -> left = ans[i - 1];
+        }
+        if (_p -> right) {
+            ans.push_back(
+                ans[i] -> right = new thrnode(_p -> right -> val)
+            ); 
+            tmp.push(_p -> right);
+        } else {
+            ans[i] -> rtag = 1;
+            if (i != ans.size() - 1) ans[i] -> right = ans[i + 1];
+        }
+        ++i;
+        tmp.pop();
+    }
+    return t = ans[0];
+}
+```
+
+## 13. 使用非递归算法求叶子节点数
+
+```cpp
+template <typename T> size_t Binarytree<T>::sizeOfLeaf() const noexcept {
+    std::queue<Binarytreenode*> q;
+    int ans = 0;
+    if (p) q.push(p);
+    while (q.size()) {
+        auto tmp = q.front();
+        if (tmp -> left) q.push(tmp -> left);
+        if (tmp -> right) q.push(tmp -> right);
+        if (!(tmp -> right || tmp -> left)) ++ans;
+        q.pop();
+    }
+    return ans;
+}
+```
+
+## 14. 求字符串的最短编码长度
+本代码模拟haffman-tree建立与应用过程，具体的类定义与实现请参见[第六次上机作业第二题](06/lab)
+```cpp
+// @brief 统计所有字符出现的个数
+map<char, unsigned long long> readfiles(string &s) {
+    map<char, unsigned long long> charmap;
+    for (auto &i : s)
+        charmap[i] += 1;
+    return charmap;
+}
+
+// @brief 根据词频建立小根堆
+heap make_heap(map<char, unsigned long long> & charmap) {
+    heap h;
+    for (auto i: charmap) {
+        haffman_tree * tmp = new haffman_tree(i.first, i.second);
+        h.push(tmp);
+    }
+    return h;
+}
+
+// @brief 根据小根堆建立haffman - tree
+haffman_tree * make_tree(heap h) {
+    if (h.empty())
+        return NULL;
+
+    while (h.size()>1) {
+        haffman_tree * tmp1 = h.front();
+        h.pop();
+        haffman_tree * tmp2 = h.front();
+        h.pop();
+        haffman_tree * tmp = new haffman_tree(tmp1, tmp2);
+        h.push(tmp);
+    }
+    
+    return h.front();
+}
+
+// @brief 根据haffman - tree 获得对应字符的haffman编码
+map<char, string> translate(haffman_tree * t) {
+    queue<pair<haffman_tree *, string>> lst;
+    map<char, string> ans;
+    lst.push(make_pair(t, ""));
+    while (lst.empty() == false) {
+        haffman_tree * tmp = lst.front().first;
+        if (tmp->left())
+            lst.push(make_pair(
+                tmp->getleft(), lst.front().second + "0"
+            ));
+        if (tmp->right())
+            lst.push(make_pair(
+                tmp->getright(), lst.front().second + "1"
+            ));
+        if (tmp->isleaf())
+            ans[tmp->val()]=lst.front().second;
+        lst.pop();
+    }
+    return ans;
+}
+
+int main(int argc, char *argv[]) {
+    map<char, unsigned long long> frequency = readfiles(argv[0]);
+    heap tmp_heap = make_heap(frequency);
+    haffman_tree * tree = make_tree(tmp_heap);
+    map<char, string> codetable = translate(tree);
+    auto ans = 0;
+    for (auto &i: frequency) 
+        ans += codetable[i.first].size();
+    cout << ans;
+    return 0;
 }
 ```
