完成了第六次书面作业

--- a/06/书面作业/06.md
+++ b/06/书面作业/06.md
@@ -1,3 +1,17 @@
+---
+toc:
+    ordered: true
+html:
+    embed_local_images: true
+    embed_svg: true
+    offline: true
+    toc: true
+
+print_background: false
+export_on_save:
+    html: true
+---
+
 # 数据结构第六次书面作业
 
 <center>
@@ -213,3 +227,135 @@ v4 --> |20| v6
 </center>
 
 ## 证明：适当排列次序可以使得有向无环图邻接矩阵中主对角线以下元素全部为0
+**证明**：有向无环图是树，将树按照层序遍历排列，主对角线以下的元素就全都为0.
+
+## 关于图4所示的有向网图，求各活动最早开始时间及最晚开始时间，写出关键活动和关键路径。
+<center>
+
+```mermaid
+graph LR
+v1 --> |a1=4| v2 --> |a5=6| v4
+v1 --> |a2=3| v3 --> |a4=4| v4
+v2 --> |a3=2| v3
+```
+图4
+</center>
+
+|各事件最早开始时间以及最晚开始时间|||||
+|:--:|:--:|:--:|:--:|:--:|
+|开始时间|>|>|>|事件|
+|^|$v_1$|$v_2$|$v_3$|$v_4$|
+|最早开始时间|0|4|6|10|
+|最晚开始时间|0|4|6|10|
+
+|各活动最早开始时间和最晚开始时间||||||
+|:--:|:--:|:--:|:--:|:--:|:--:|
+|开始时间|>|>|>|>|事件|
+|^|$a_1$|$a_2$|$a_3$|$a_4$|$a_5$|
+|最早开始时间|0|0|4|6|4|
+|最晚开始时间|0|3|4|6|4|
+
+关键活动是$a_1, a_3, a_4, a_5$，构成关键路径有两条如图所示
+
+<center>
+
+```mermaid
+graph LR
+v1 --> |a1=4| v2 --> |a3=2| v3 --> |a4=4| v4
+```
+
+路径1
+
+```mermaid
+graph LR
+v1 --> |a1=4| v2 --> |a5=6| v4
+```
+
+路径2
+
+</center>
+## 设计算法，将无向图的邻接矩阵转化为邻接表
+```cpp
+void Array2Lst(
+    vector<vector<bool>> & p,
+    vector<vertex> &v
+) const {
+    for (auto i = 0; i < p.size(); ++i) 
+        for (auto j = 0; j < p[i].size(); ++j)
+            if (p[i][j])
+                v[i].e.push_back(v.begin() + j);
+}
+```
+
+## 设计算法，将无向图的邻接表转化为邻接矩阵
+```cpp
+void Array2Lst(
+    vector<vector<bool>> & p,
+    vector<vertex> &v
+) const {
+    for (auto i = 0; i < v.size(); ++v) 
+        for (auto &j : i.e)
+            p[i][j - v.begin()] = 1;
+}
+```
+
+## 设计算法，计算出度为0的顶点个数
+```cpp
+size_t sum0(vector<vector<bool>> & p) {
+    size_t ans = 0;
+    for (auto &i: p)
+        ans += !accumulate(i.begin(), i.end(), 0);
+    return ans;
+}
+```
+
+## 深度优先遍历邻接表储存的图
+```cpp
+void DFS(vertex &v) {
+    if (v.visited)
+        return;
+    v.visited = 1;
+    for (auto &i: v.e)
+        DFS(*i);
+}
+```
+
+## 从有向图的邻接表获得逆邻接表
+```cpp
+void reverse(
+    vector<vertex> &v, 
+    vector<vertex> &vr
+) const {
+    for (auto i = v.begin(); i != v.end(); ++i)
+        for (auto &j : i -> e)
+            vr[j - v.begin()].e.push_back(
+                vr.begin() + int(i - v.begin())
+            );
+}
+```
+
+## 基于深度优先算法与广度优先算法，判断i, j之间是否有通路
+深度优先遍历在之前的题目中已经给过代码，这里直接调用
+```cpp
+bool islinked(vertex &i, vertex &j) {
+    DFS(i);
+    return j.visited;
+}
+```
+
+下面给出广度优先搜索算法：
+```cpp
+bool islinked(vertex &i, vertex &j) {
+    queue<vertex> q;
+    q.push(i);
+    while (q.size()) {
+        for (auto &k: q.top().e)
+            if (k -> visited == 0) {
+                q.push(*k);
+                k -> visited = 1;
+            }
+        q.pop();
+    }
+    return j.visited;
+}
+```
